# BART

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  aq.txt  codecov.yml  coverage.sh  dg-ep-proto  dg-ep-proto.cc  doxygen_config  initial-planning.md  install_build.md  planning.md  t-refall  t-refallmk  t-refhlf  t1  t1_in.txt  t2.txt  tools_cc  tools_h  work_log.txt
benchmarks/c5g7/: uo2.material
benchmarks/mox_2005/: high_scattering_moderator.mat  moderator.mat  no_two_grid.prm  two_grid.prm
benchmarks/picca_2016/: figure_2.material_map  figure_2_diffusion.prm  figure_2_diffusion_half.prm  figure_2_saaf.prm  figure_2_saaf_dft.prm  figure_2_saaf_half.prm  reactor
benchmarks/tg_fake_cross_sections/: high_scattering_fissionable.material  high_scattering_reflector.material  no_two_grid.prm  two_grid.prm  two_materials.material_map
doc/: bart_and_gtest.md  bart_doxygen.css  initial-planning.md  planning.md
doc/diagrams/: class-usage.xml  instantiation-inheritance.xml
doc/html/: annotated.html  aq__base_8cc.html  aq__base_8cc__incl.map  aq__base_8cc__incl.md5  aq__base_8cc_source.html  aq__base_8h.html  aq__base_8h__dep__incl.map  aq__base_8h__dep__incl.md5  aq__base_8h__incl.map  aq__base_8h__incl.md5  aq__base_8h_source.html  bart__driver_8cc.html  bart__driver_8cc__incl.map  bart__driver_8cc__incl.md5  bart__driver_8cc_source.html  bart__driver_8h.html  bart__driver_8h__dep__incl.map  bart__driver_8h__dep__incl.md5  bart__driver_8h__incl.map  bart__driver_8h__incl.md5  bart__driver_8h_source.html  class_a_q_base-members.html  class_a_q_base.html  class_a_q_base__inherit__graph.map  class_a_q_base__inherit__graph.md5  class_a_q_base_a3a05ceb6b201b4e6e605b260d766842d_cgraph.map  class_a_q_base_a3a05ceb6b201b4e6e605b260d766842d_cgraph.md5  class_a_q_base_ad8bf7c63bde67a2f514aea2c589983dd_icgraph.map  class_a_q_base_ad8bf7c63bde67a2f514aea2c589983dd_icgraph.md5  class_bart_driver-members.html  class_bart_driver.html  class_bart_driver_a20c70ef3733fc4406353e6fdfee6c684_icgraph.map  class_bart_driver_a20c70ef3733fc4406353e6fdfee6c684_icgraph.md5  class_bart_driver_ade375a4999de1e775434e11d4e6dd935_icgraph.map  class_bart_driver_ade375a4999de1e775434e11d4e6dd935_icgraph.md5  class_eigen_base-members.html  class_eigen_base.html  class_eigen_base__coll__graph.map  (+297 more)
doc/latex/: annotated.tex  (+146 more)
gtest-relics/: CMakeLists.txt
html/: annotated.html  aq__base_8cc.html  aq__base_8cc_source.html  aq__base_8h.html  aq__base_8h_source.html  bart__driver_8cc.html  bart__driver_8cc_source.html  bart__driver_8h.html  bart__driver_8h_source.html  class_a_q_base-members.html  class_a_q_base.html  class_bart_driver-members.html  class_bart_driver.html  class_eigen_base-members.html  class_eigen_base.html  class_equation_base-members.html  class_equation_base.html  class_even_parity-members.html  class_even_parity.html  class_gauss_seidel-members.html  class_gauss_seidel.html  class_i_g_base-members.html  class_i_g_base.html  class_iteration_base-members.html  class_iteration_base.html  class_iterations-members.html  class_iterations.html  class_l_s_g_c-members.html  class_l_s_g_c.html  class_m_g_base-members.html  class_m_g_base.html  class_material_properties-members.html  class_material_properties.html  class_mesh_generator-members.html  class_mesh_generator.html  class_power_iteration-members.html  class_power_iteration.html  class_preconditioner_solver-members.html  class_preconditioner_solver.html  class_problem_definition-members.html  (+103 more)
include/: EP_SN.h  aq_lsgc.h  even_parity.h  mesh_generator.h  model_manager.h  problem_definition.h  transport_base.h
latex/: annotated.tex  aq__base_8cc.tex  aq__base_8h.tex  bart__driver_8cc.tex  bart__driver_8h.tex  class_a_q_base.eps  class_a_q_base.tex  class_bart_driver.tex  class_eigen_base.tex  class_equation_base.eps  class_equation_base.tex  class_even_parity.tex  class_gauss_seidel.eps  class_gauss_seidel.tex  class_i_g_base.tex  class_iteration_base.tex  class_iterations.tex  class_l_s_g_c.tex  class_m_g_base.eps  class_m_g_base.tex  class_material_properties.tex  class_mesh_generator.tex  class_power_iteration.eps  class_power_iteration.tex  class_preconditioner_solver.tex  class_problem_definition.tex  class_source_iteration.eps  class_source_iteration.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8845994d1217a8dedc835b1d7ba0c57c.tex  dir_fdedb0aba14d44ce9d99bc100e026e6a.tex  eigen__base_8cc.tex  eigen__base_8h.tex  equation__base_8cc.tex  equation__base_8h.tex  even__parity_8cc.tex  even__parity_8h.tex  gauss__seidel_8cc.tex  gauss__seidel_8h.tex  ig__base_8cc.tex  (+24 more)
legacy_code/: cfem_framework_builder_int_test.cc  main.cc
original_code/: CMakeLists.txt  dg-ep-proto.cc
protobuf/: material.proto
reg-test/: regression_test_diffusion  regression_test_diffusion_reflective  t-diff  t-diff-refl  t-ep  t-ep.material  t-ep_readable.material  t-saaf  t-saaf-refl
results/: quadr.txt
serial/: CMakeLists.txt  t1_in.txt
src/: EP_SN.cc  aq_base.cc  aq_lsgc.cc  even_parity.cc  main.cc  material_properties.cc  mesh_generator.cc  model_manager.cc  problem_definition.cc  test_main.cc  transport_base.cc
src/mesh/: CMakeLists.txt  mesh_generator.cc  mesh_generator.h
test-input/: mid.txt  t-1gk-all  t-1gk-hlf  t-1gk-nr  t-1gkeff  t-ep  t-refall  t-refhlf
tests/: test_utilities.h
tests/aqdata/: CMakeLists.txt  aq_base_01.cc  aq_base_01.output  aq_base_1d.cc  aq_base_1d.output  dummy_test.cc  dummy_test.output  lsgc_01.cc  lsgc_01.output  lsgc_non_ep.cc  lsgc_non_ep.output
tests/common/: CMakeLists.txt  bart_builder_01.cc  bart_builder_01.output  problem_definition_01.cc
tests/mesh/: CMakeLists.txt  fuelid.unstruct.2d  fuelid.unstruct.3d  matid.homogeneous.2d  matid.homogeneous.3d  matid.unstruct.3d  mesh_generator_01.cc  mesh_generator_01.mpirun=4.output  mesh_generator_all_d.cc  mesh_generator_all_d.output  mpi_dummy.cc  mpi_dummy.mpirun=2.output  mpi_dummy.mpirun=6.output  unstruct_mesh_2d.cc  unstruct_mesh_2d.output  unstruct_mesh_3d.cc  unstruct_mesh_3d.output  unstructured_mesh_2d.output
(+1268 files in other folders)
